# cwiczenia

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pages-watcher.yml  pages.yml  pre-commit.yml
docs/: index.html
examples/: dose_sample.npy  mask_sample.npy
scripts/: compute_dvh.py  overlay_dose_ct.py  read_dicom.py  smoke_test.py
src/: main.py
tests/: test_compute_dvh.py  test_main.py  test_overlay_dose_ct.py  test_read_dicom.py  test_read_dicom_save.py
